--- a/FoodGround/src/main/resources/application.properties
+++ b/FoodGround/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.mvc.view.suffix: .jsp
 #Logger
 logging.level.com.brendon.lee=debug
 
+#MySQL
+spring.datasource.driver-class-name=jdbc:hsqldb:mem:testdb
+spring.datasource.username=sa
+
 #Port
 server.port=8080
 
